--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
+  "plugins": ["jest"],
   "extends": [
     "eslint:recommended",
+    "plugin:jest/recommended",
     "airbnb-base"
   ],
   "parser": "babel-eslint",
