--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "develop": "webpack --mode development --watch",
     "build": "webpack --mode production"
   },
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dom-to-image": "^2.6.0",
+    "eslint-plugin-jest": "^22.15.1",
+    "jest": "^24.8.0",
     "jspdf": "^1.5.3"
   },
   "devDependencies": {
